projects/los-retail/lms/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lms
  name: lms
  namespace: los-retail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms
  template:
    metadata:
      labels:
        app: lms
    spec:
      containers:
        - image: registry.coherent.in/lms-management:2
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: lms
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 7019
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
