projects/los-retail/lms/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lms
  name: lms-svc
  namespace: los-retail-dev
spec:
  ports:
    - port: 6019
      protocol: TCP
      targetPort: 6019
  selector:
    app: lms
